another attempt to fix gray box spacing

--- a/style.css
+++ b/style.css
@@ -25,6 +25,5 @@
     background: lightgray;
     /*add CSS here*/
     display: inline-block;
-    margin: 80px;
+    margin: 70px;
 }
-
